[project]
name = "openai-prompter"
description = "A custom node for ComfyUI that generates creative and detailed prompts using OpenAI's GPT models."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["openai>=1.0.0"]

[project.urls]
Repository = "https://github.com/nisimjoseph/ComfyUI_OpenAI-Prompter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_OpenAI-Prompter"
Icon = ""
